--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,11 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+/* clock 
+*/
+
+#clock {
+  @apply text-7xl text-green-600 text-center bg-black font-mono;
+}
+
