--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -9,3 +9,42 @@
   @apply text-7xl text-green-600 text-center bg-black font-mono;
 }
 
+
+/* Custom CSS for LiveView course */
+
+body {
+  @apply antialiased relative bg-slate-200 font-sans;
+}
+
+nav {
+  @apply py-3 px-6 flex justify-end;
+}
+
+nav ul {
+  @apply flex items-center justify-between gap-4;
+}
+
+nav ul li {
+  @apply text-base text-slate-700;
+}
+
+nav ul li a:hover {
+  @apply underline;
+}
+
+main {
+  @apply max-w-6xl mx-auto py-6 px-4 sm:px-6 lg:px-8;
+}
+
+h1 {
+  @apply text-center text-slate-900 font-extrabold text-3xl;
+}
+
+h2 {
+  @apply text-center text-slate-800 font-extrabold text-2xl;
+}
+
+h3 {
+  @apply text-center text-slate-800 font-bold text-xl;
+}
+
