remove top line from main page

--- a/lib/live_view_studio_web/controllers/page_html/home.html.heex
+++ b/lib/live_view_studio_web/controllers/page_html/home.html.heex
@@ -1,4 +1,4 @@
-<.flash_group flash={@flash} />
+<%!-- <.flash_group flash={@flash} /> --%>
 <div id="projects">
   <h1><.link href={~p"/clock"}>🕰️ Clock</.link></h1>
 </div>
