--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -6,7 +6,7 @@
 */
 
 #clock {
-  @apply text-red-600 text-center  font-mono text-7xl scale-[2.3] py-10;
+  @apply text-red-600 text-center  font-mono text-9xl scale-150 py-10;
 }
 
 #day_name {
