--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -13,6 +13,9 @@
   @apply text-9xl text-white text-center font-semibold scale-100 py-4 ;
 }
 
+#date {
+  @apply text-6xl text-white text-center font-semibold scale-100 py-4 ;
+}
 body {
   @apply antialiased relative bg-slate-200 font-sans bg-black ;
 }
